--- a/implementacion/app/views/users/nuevo_colciencias.html.erb
+++ b/implementacion/app/views/users/nuevo_colciencias.html.erb
@@ -19,16 +19,33 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :nombre, :class => "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :nombre, :class => "form-control" %>
+  <%= f.fields_for :usuario_col, UsuarioCol.new(user: @user) do |fields_colciencias|%>
+    <div class="form-group">
+      <%= fields_colciencias.label :nombre, :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= fields_colciencias.text_field :nombre, :class => "form-control" %>
+      </div>
     </div>
-  </div>
+  <% end %>
+
   <div class="form-group">
     <%= f.label :email, :class => "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :email, :class => "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :password, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Escriba la contraseña", value: "" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :password_confirmation, :class => "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Repita la contraseña", value: "" %>
     </div>
   </div>
 
