--- a/implementacion/test/reports/TEST-ProyectosControllerTest.xml
+++ b/implementacion/test/reports/TEST-ProyectosControllerTest.xml
@@ -1,41 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="ProyectosControllerTest" tests="7" time="0.12739599" failures="0" errors="4" skipped="0" assertions="8" timestamp="2014-11-05T16:59:38-05:00">
-  <testcase name="test_should_create_proyecto" time="0.021932656" assertions="3">
+<testsuite name="ProyectosControllerTest" tests="7" time="0.077191654" failures="6" errors="1" skipped="0" assertions="6" timestamp="2014-12-02T21:58:29-05:00">
+  <testcase name="test_should_create_proyecto" time="0.071066365" assertions="1">
+    <failure type="Minitest::Assertion" message="&quot;Proyecto.count&quot; didn't change by 1....">
+"Proyecto.count" didn't change by 1.
+Expected: 3
+  Actual: 2 (Minitest::Assertion)
+/home/gustavo/repos/rails/modulo_seguimiento/implementacion/test/controllers/proyectos_controller_test.rb:21    </failure>
   </testcase>
-  <testcase name="test_should_destroy_proyecto" time="0.006965197" assertions="3">
+  <testcase name="test_should_destroy_proyecto" time="0.013491376" assertions="1">
+    <failure type="Minitest::Assertion" message="&quot;Proyecto.count&quot; didn't change by -1....">
+"Proyecto.count" didn't change by -1.
+Expected: 1
+  Actual: 2 (Minitest::Assertion)
+/home/gustavo/repos/rails/modulo_seguimiento/implementacion/test/controllers/proyectos_controller_test.rb:56    </failure>
   </testcase>
-  <testcase name="test_should_get_edit" time="0.028297974" assertions="0">
-    <error type="ActionView::Template::Error" message="ActionView::Template::Error: couldn't find file 'jquery.ui.core'...">
-ActionView::Template::Error: couldn't find file 'jquery.ui.core'
-  (in /home/yiyo/dev/modulo_seguimiento/implementacion/app/assets/stylesheets/application.css:16)
-    app/views/layouts/application.html.erb:15:in `_app_views_layouts_application_html_erb___4473830424599349827_70130814648260'
-    test/controllers/proyectos_controller_test.rb:33:in `block in &lt;class:ProyectosControllerTest&gt;' (ActionView::Template::Error)
-/home/yiyo/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sprockets-2.11.0/lib/sprockets/context.rb:106    </error>
+  <testcase name="test_should_get_edit" time="0.009332406" assertions="1">
+    <failure type="Minitest::Assertion" message="Expected response to be a &lt;success&gt;, but was &lt;302&gt;">
+Expected response to be a &lt;success&gt;, but was &lt;302&gt; (Minitest::Assertion)
+/home/gustavo/repos/rails/modulo_seguimiento/implementacion/test/controllers/proyectos_controller_test.rb:41    </failure>
   </testcase>
-  <testcase name="test_should_get_index" time="0.018638564" assertions="0">
-    <error type="ActionView::Template::Error" message="ActionView::Template::Error: couldn't find file 'jquery.ui.core'...">
-ActionView::Template::Error: couldn't find file 'jquery.ui.core'
-  (in /home/yiyo/dev/modulo_seguimiento/implementacion/app/assets/stylesheets/application.css:16)
-    app/views/layouts/application.html.erb:15:in `_app_views_layouts_application_html_erb___4473830424599349827_70130814648260'
-    test/controllers/proyectos_controller_test.rb:9:in `block in &lt;class:ProyectosControllerTest&gt;' (ActionView::Template::Error)
-/home/yiyo/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sprockets-2.11.0/lib/sprockets/context.rb:106    </error>
+  <testcase name="test_should_get_index" time="0.008435288" assertions="1">
+    <failure type="Minitest::Assertion" message="Expected response to be a &lt;success&gt;, but was &lt;302&gt;">
+Expected response to be a &lt;success&gt;, but was &lt;302&gt; (Minitest::Assertion)
+/home/gustavo/repos/rails/modulo_seguimiento/implementacion/test/controllers/proyectos_controller_test.rb:11    </failure>
   </testcase>
-  <testcase name="test_should_get_new" time="0.016154702" assertions="0">
-    <error type="ActionView::Template::Error" message="ActionView::Template::Error: couldn't find file 'jquery.ui.core'...">
-ActionView::Template::Error: couldn't find file 'jquery.ui.core'
-  (in /home/yiyo/dev/modulo_seguimiento/implementacion/app/assets/stylesheets/application.css:16)
-    app/views/layouts/application.html.erb:15:in `_app_views_layouts_application_html_erb___4473830424599349827_70130814648260'
-    test/controllers/proyectos_controller_test.rb:15:in `block in &lt;class:ProyectosControllerTest&gt;' (ActionView::Template::Error)
-/home/yiyo/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sprockets-2.11.0/lib/sprockets/context.rb:106    </error>
+  <testcase name="test_should_get_new" time="0.008258314" assertions="1">
+    <failure type="Minitest::Assertion" message="Expected response to be a &lt;success&gt;, but was &lt;302&gt;">
+Expected response to be a &lt;success&gt;, but was &lt;302&gt; (Minitest::Assertion)
+/home/gustavo/repos/rails/modulo_seguimiento/implementacion/test/controllers/proyectos_controller_test.rb:17    </failure>
   </testcase>
-  <testcase name="test_should_show_proyecto" time="0.017791258" assertions="0">
-    <error type="ActionView::Template::Error" message="ActionView::Template::Error: couldn't find file 'jquery.ui.core'...">
-ActionView::Template::Error: couldn't find file 'jquery.ui.core'
-  (in /home/yiyo/dev/modulo_seguimiento/implementacion/app/assets/stylesheets/application.css:16)
-    app/views/layouts/application.html.erb:15:in `_app_views_layouts_application_html_erb___4473830424599349827_70130814648260'
-    test/controllers/proyectos_controller_test.rb:28:in `block in &lt;class:ProyectosControllerTest&gt;' (ActionView::Template::Error)
-/home/yiyo/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/sprockets-2.11.0/lib/sprockets/context.rb:106    </error>
+  <testcase name="test_should_show_proyecto" time="0.007612976" assertions="1">
+    <failure type="Minitest::Assertion" message="Expected response to be a &lt;success&gt;, but was &lt;302&gt;">
+Expected response to be a &lt;success&gt;, but was &lt;302&gt; (Minitest::Assertion)
+/home/gustavo/repos/rails/modulo_seguimiento/implementacion/test/controllers/proyectos_controller_test.rb:36    </failure>
   </testcase>
-  <testcase name="test_should_update_proyecto" time="0.005128876" assertions="2">
+  <testcase name="test_should_update_proyecto" time="0.010651913" assertions="0">
+    <error type="ActionController::UrlGenerationError" message="ActionController::UrlGenerationError: No route matches {:action=&gt;&quot;show&quot;, :controller=&gt;&quot;proyectos&quot;, :id=&gt;nil} missing required keys: [:id]...">
+ActionController::UrlGenerationError: No route matches {:action=&gt;"show", :controller=&gt;"proyectos", :id=&gt;nil} missing required keys: [:id]
+    test/controllers/proyectos_controller_test.rb:52:in `block in &lt;class:ProyectosControllerTest&gt;' (ActionController::UrlGenerationError)
+/home/gustavo/.rbenv/versions/2.1.2/lib/ruby/gems/2.1.0/gems/actionpack-4.1.6/lib/action_dispatch/routing/route_set.rb:192    </error>
   </testcase>
 </testsuite>
