Agregado enlace del admin para la administracion del sistema, y se muestra el genero y departamento en show de Becario

--- a/implementacion/app/views/becarios/show.html.erb
+++ b/implementacion/app/views/becarios/show.html.erb
@@ -33,7 +33,7 @@
   <dd><%= @becario.fecha_nacimiento %></dd>
 
   <dt>Departamento Nacimiento:</dt>
-  <dd><%= @becario.departamento_nacimiento %></dd>
+  <dd><%= @becario.try(:departamento).try(:nombre) %></dd>
 
   <dt>Género:</dt>
   <dd><%= @becario.genero %></dd>
