--- a/implementacion/app/views/layouts/application.html.erb
+++ b/implementacion/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
           <% if current_user.present? and current_user.role.eql? 'admin' %>
+            <li class="active"><a href= "/admin" >Admin</a></li>
             <li class="active"><a href= "/evaluadors" >Evaluadores</a></li>
             <li class="active"><a href= "/usuario_cols" >Usuarios Colciencias</a></li>
             <li class="active"><a href= "/becarios" >Becarios</a></li>
